@@ -778,7 +778,7 @@ argp_parser (int key, char *arg, struct argp_state *state)
         break;
 
       case ARGP_KEY_NO_ARGS:
-          fprintf (stderr, _("No device is specified.\n"));
+          fprintf (stderr, "%s", _("No device is specified.\n"));
           argp_usage (state);
           break;
 
@@ -835,7 +835,7 @@ main (int argc, char *argv[])
   /* Parse our arguments */
   if (argp_parse (&argp, argc, argv, 0, 0, &arguments) != 0)
     {
-      fprintf (stderr, _("Error in parsing command line arguments\n"));
+      fprintf (stderr, "%s", _("Error in parsing command line arguments\n"));
       exit(1);
     }
 
