@@ -1,3 +1,13 @@
+2010-09-20  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub-editenv.c (argp_parser): Don't pass translated strings
+	as printf format strings; the translations might contain '%' which
+	could cause a crash.
+	(main): Likewise.
+	* util/grub-fstest.c (argp_parser): Likewise.
+	* util/grub-setup.c (argp_parser): Likewise.
+	(main): Likewise.
+
 2010-09-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Use argp in grub-fstest.
